--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/jass.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-light text-dark">
     <main>
       <h1>Password Generator</h1>
       <h2>Click on the button to get started!</h2>
       <hr/>
 
-      <pre class="text-dark bg-light p-5" id="password-display">Password will go here...</pre>
+      <pre class="text-lPassword will go here...ight bg-info p-5" id="password-display">Password will go here...</pre>
       <button id="password-btn" class="btn btn-block btn-info ">Generate Password</button>
     </main>
 
